--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,3 @@
-body{
-    background-color: rgb(39, 38, 38);
-    color: whitesmoke;
-}
 .slider{
     display: flex;
     flex-direction: row;
@@ -11,15 +7,6 @@ body{
     display: flex;
     flex-direction: row;
     gap: 3px;
-}
-.movieImage{
-    width: 240px;
-    height: 150px;
-    object-fit: cover;
-}
-.movie{
-    width: 240px;
-    height: 150px;
 }
 .selected{
     border: 3px solid red;
@@ -48,3 +35,15 @@ body{
 .mainSlider{
     margin-left: 2%;
 }
+.selected{
+    width: 230px;
+    height: 130px;
+}
+.movieImage{
+    padding: 0 6px;
+    float: left;
+    width: 220px;
+    height: 130px;
+    object-fit: cover;
+}
+ 
