--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -24,10 +24,14 @@
 }
 .divData{
     margin: 1%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .divData > input{
     padding: 0.3%;
     margin: 0.3%;
+    max-width: 20%;
 }
 .genreName{
     text-align: left;
